--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "codegen:watch": "graphql-codegen --watch"
   },
   "dependencies": {
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@hookform/resolvers": "^5.2.1",
     "@tanstack/react-query": "^5.85.5",
     "graphql": "^16.11.0",
